Build network of nodes and links from parameters json file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,3 +21,6 @@ target_link_libraries(sync_videos ${OpenCV_LIBS} video_tools stdc++fs)
 
 add_executable(autolink autolink.cpp ParamsLog.cpp)
 target_link_libraries(autolink ${OpenCV_LIBS} image_stitch video_tools stdc++fs nlohmann_json::nlohmann_json)
+
+add_executable(stitch_video stitch_video.cpp stitch_assemble.cpp video_sync.cpp)
+target_link_libraries(stitch_video ${OpenCV_LIBS} nlohmann_json::nlohmann_json stdc++fs)
