--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,11 +16,11 @@ add_subdirectory(image_stitch)
 add_library(video_tools video_sync.cpp)
 target_link_libraries(video_tools ${OpenCV_LIBS})
 
-add_executable(sync_videos sync_videos.cpp)
+add_executable(sync_videos test_sync_videos.cpp)
 target_link_libraries(sync_videos ${OpenCV_LIBS} video_tools stdc++fs)
 
-add_executable(autolink autolink.cpp ParamsLog.cpp)
+add_executable(autolink test_autolink.cpp ParamsLog.cpp)
 target_link_libraries(autolink ${OpenCV_LIBS} image_stitch video_tools stdc++fs nlohmann_json::nlohmann_json)
 
-add_executable(stitch_video stitch_video.cpp stitch_assemble.cpp video_sync.cpp)
+add_executable(stitch_video test_params_reader.cpp params_reader.cpp video_sync.cpp)
 target_link_libraries(stitch_video ${OpenCV_LIBS} nlohmann_json::nlohmann_json stdc++fs)
