Stitch each pair of camera views using mean stitching parameters

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,5 +22,5 @@ target_link_libraries(sync_videos ${OpenCV_LIBS} video_tools stdc++fs)
 add_executable(autolink test_autolink.cpp ParamsLog.cpp)
 target_link_libraries(autolink ${OpenCV_LIBS} image_stitch video_tools stdc++fs nlohmann_json::nlohmann_json)
 
-add_executable(stitch_video test_params_reader.cpp params_reader.cpp video_sync.cpp)
+add_executable(stitch_video test_stitch_assemble.cpp params_reader.cpp video_sync.cpp stitch_assemble.cpp)
 target_link_libraries(stitch_video ${OpenCV_LIBS} nlohmann_json::nlohmann_json stdc++fs)
